methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:2: error: not found: value setCoueurBrosse
  setCoueurBrosse(c)
  ^